@@ -5,19 +5,24 @@ of an object and its parent classes.
 
 from __future__ import absolute_import, unicode_literals
 
-from collections import Sequence
+import warnings
+
+import jaraco.itertools
 
 def ensure_sequence(el):
 	"""
+	*Deprecated*
+
 	if item is not a sequence, return the item as a singleton in a list
+
 	>>> ensure_sequence(3)
 	[3]
 	>>> ensure_sequence([3,4])
 	[3, 4]
 	"""
-	if isinstance(el, Sequence):
-		return el
-	return [el]
+	msg = "Deprecated. Use jaraco.itertools.always_iterable"
+	warnings.warn(msg, DeprecationWarning)
+	return list(jaraco.itertools.always_iterable(el))
 
 def all_bases(c):
 	"""
